x11/apps/dwm-6.4/build.log
emcc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION=\"6.4\"  drw.c
emcc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION=\"6.4\"  dwm.c
dwm build options:
emcc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION=\"6.4\"  util.c
CFLAGS   = -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_POSIX_C_SOURCE=200809L -DVERSION="6.4" 
LDFLAGS  = 
CC       = emcc
In file included from drw.c:8:
./drw.h:6:9: warning: empty struct is a GNU extension [-Wgnu-empty-struct]
    6 | typedef struct {} FcPattern;
      |         ^
drw.c:122:51: error: expected ')'
  122 |                 if (!(pattern = /* FcNameParse disabled */ NULL fontname))) {
      |                                                                 ^
drw.c:122:8: note: to match this '('
  122 |                 if (!(pattern = /* FcNameParse disabled */ NULL fontname))) {
      |                      ^
drw.c:122:61: error: extraneous ')' after condition, expected a statement
  122 |                 if (!(pattern = /* FcNameParse disabled */ NULL fontname))) {
      |                                                                           ^
drw.c:189:7: error: call to undeclared function 'XftColorAllocName'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  189 |         if (!XftColorAllocName(drw->dpy, DefaultVisual(drw->dpy, drw->screen),
      |              ^
drw.c:243:2: error: use of undeclared identifier 'XftDraw'
  243 |         XftDraw *d = NULL;
      |         ^~~~~~~
drw.c:243:11: error: use of undeclared identifier 'd'
  243 |         XftDraw *d = NULL;
      |                  ^
drw.c:248:2: error: unknown type name 'FcCharSet'; did you mean 'FcChar8'?
  248 |         FcCharSet *fccharset;
      |         ^~~~~~~~~
      |         FcChar8
./drw.h:8:23: note: 'FcChar8' declared here
    8 | typedef unsigned char FcChar8;
      |                       ^
drw.c:251:2: error: unknown type name 'XftResult'; did you mean 'FcResult'?
  251 |         XftResult result;
      |         ^~~~~~~~~
      |         FcResult
./drw.h:9:13: note: 'FcResult' declared here
    9 | typedef int FcResult;
      |             ^
drw.c:266:3: error: use of undeclared identifier 'd'
  266 |                 d = NULL,
      |                 ^
drw.c:282:32: error: call to undeclared function 'XftCharExists'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  282 |                                 charexists = charexists || XftCharExists(drw->dpy, curfont->xfont, utf8codepoint);
      |                                                            ^
drw.c:320:53: error: member reference base type 'void' is not a structure or union
  320 |                                 ty = y + (h - usedfont->h) / 2 + usedfont->xfont->ascent;
      |                                                                  ~~~~~~~~~~~~~~~^ ~~~~~~
drw.c:359:12: error: call to undeclared function 'XftFontMatch'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  359 |                         match = XftFontMatch(drw->dpy, drw->screen, fcpattern, &result);
      |                                 ^
drw.c:359:10: error: incompatible integer to pointer conversion assigning to 'FcPattern *' from 'int' [-Wint-conversion]
  359 |                         match = XftFontMatch(drw->dpy, drw->screen, fcpattern, &result);
      |                               ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
drw.c:366:21: error: call to undeclared function 'XftCharExists'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
  366 |                                 if (usedfont && XftCharExists(drw->dpy, usedfont->xfont, utf8codepoint)) {
      |                                                 ^
drw.c:379:6: error: use of undeclared identifier 'd'
  379 |         if (d)
      |             ^
In file included from dwm.c:44:
./drw.h:6:9: warning: empty struct is a GNU extension [-Wgnu-empty-struct]
    6 | typedef struct {} FcPattern;
      |         ^
drw.c:415:2: error: use of undeclared identifier 'XGlyphInfo'
  415 |         XGlyphInfo ext = {0};
      |         ^~~~~~~~~~
drw.c:420:65: error: invalid suffix 'text' on integer constant
  420 |         /* XftTextExtentsUtf8 disabled - setting ext to zero */ (void)0text, len, &ext);
      |                                                                        ^
drw.c:420:77: error: use of undeclared identifier 'ext'
  420 |         /* XftTextExtentsUtf8 disabled - setting ext to zero */ (void)0text, len, &ext);
      |                                                                                    ^~~
drw.c:422:8: error: use of undeclared identifier 'ext'; did you mean 'text'?
  422 |                 *w = ext.xOff;
      |                      ^~~
      |                      text
drw.c:413:41: note: 'text' declared here
  413 | drw_font_getexts(Fnt *font, const char *text, unsigned int len, unsigned int *w, unsigned int *h)
      |                                         ^
drw.c:422:11: error: member reference base type 'const char *' is not a structure or union
  422 |                 *w = ext.xOff;
      |                      ~~~^~~~~
1 warning and 19 errors generated.
make: *** [Makefile:18: drw.o] Error 1
make: *** Waiting for unfinished jobs....
dwm.c:1836:17: warning: a function declaration without a prototype is deprecated in all versions of C [-Wstrict-prototypes]
 1836 | updateclientlist()
      |                 ^
      |                  void
2 warnings generated.
